[package]
name = "operator"
version = "0.6.2"
authors = ["Matt Kantor <the.matt.kantor@gmail.com>"]
description = "A web server for static and dynamic content"
repository = "https://github.com/mkantor/operator"
homepage = "https://operator.mattkantor.com"
categories = ["web-programming::http-server", "command-line-utilities"]
keywords = ["web", "server", "http", "templating", "handlebars"]
readme = "README.md"
license = "GPL-3.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",

    # Ideally this would not be necessary, but when `cargo publish` verifies
    # the package tarball it checks [[bench]] and fails without this.
    "benches/**/*",
]

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.3"
anyhow = "1.0.86"
bytes = "0.5.6"
futures = "0.3.30"
handlebars = "5.1.2"
log = "0.4.22"
mime = "0.3.17"
mime_guess = "2.0.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
stderrlog = "0.6.0"
structopt = "0.3.26"
thiserror = "1.0.62"
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.5.1"
env_logger = "0.11.3"
insta = { version = "1.39.0", features = ["yaml"] }
lazy_static = "1.5.0"
maplit = "1.0.2"
regex = "1.10.5"
tempfile = "3.10.1"
test-log = "0.2.16"

[[bench]]
name = "load_test"
harness = false
