[package]
name = "operator"
version = "0.6.4"
authors = ["Matt Kantor <the.matt.kantor@gmail.com>"]
description = "A web server for static and dynamic content"
repository = "https://github.com/mkantor/operator"
homepage = "https://operator.mattkantor.com"
categories = ["web-programming::http-server", "command-line-utilities"]
keywords = ["web", "server", "http", "templating", "handlebars"]
readme = "README.md"
license = "GPL-3.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",

    # Ideally this would not be necessary, but when `cargo publish` verifies
    # the package tarball it checks [[bench]] and fails without this.
    "benches/**/*",
]

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.3"
anyhow = "1.0.96"
bytes = "0.5.6"
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
handlebars = "6.3.1"
log = "0.4.26"
mime = "0.3.17"
mime_guess = "2.0.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
stderrlog = "0.6.0"
thiserror = "2.0.11"
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.5.1"
env_logger = "0.11.6"
insta = { version = "1.42.1", features = ["yaml"] }
lazy_static = "1.5.0"
maplit = "1.0.2"
regex = "1.11.1"
tempfile = "3.17.1"
test-log = "0.2.17"

[[bench]]
name = "load_test"
harness = false
